// MANN module configurations.

syntax = "proto2";

package fewshot.configs;

message MANNConfig {
  optional int32 memory_dim = 1;
  optional int32 controller_dim = 2;
  optional int32 num_slots = 3;
  optional int32 num_reads = 4;
  optional int32 num_writes = 5;
  optional float memory_decay = 6;
  optional string controller_type = 7 [default = "lstm"];
  optional int32 memory_attention_steps = 8;
  optional int32 num_write_steps = 9;
  optional int32 num_delay_steps = 10;
  optional string memory_attention_type = 11 [default = "symmetric"];
  optional int32 affinity_prop_steps = 12 [default =  5];
  optional string affinity_prop_similarity = 13 [default =  "cosine"];
  optional float affinity_prop_damping = 14 [default = 0.5];
  optional bool memory_layernorm = 15 [default = false];
  optional bool controller_layernorm = 16 [default = false];
  optional int32 controller_nstack = 17 [default = 2];
  optional string similarity_type = 18 [default = "cosine"];
  optional int32 query_key_dim = 19 [default = -1];
  optional string readout_type = 20 [default = "linear"];
  optional bool use_unk_gate = 21 [default = true];
  optional bool use_feat_gate = 22 [default = true];
}
